Fix for printing issue #371 to force elements with class "no-print" to be invisible.

--- a/scss/_print.scss
+++ b/scss/_print.scss
@@ -14,10 +14,9 @@
     a[href]:after {
         content: none !important;
     }
-  
 
     .no-print {
-        display: none;
+        display: none !important;
     }
 
     .force-print, .only-print {
@@ -26,7 +25,7 @@
 
     .ru-answer-check {
         @extend .no-print;
-   }
+    }
 
     .tabs-content.ru_tabs.ru-answer .content.ru-answer, .tabs.ru_tabs dd.active.ru-answer a, .tabs.ru_tabs dd.ru-answer a, .tabs.ru_tabs dd.active.ru-answer a, .tabs.ru_tabs dd.ru-answer a:hover {
         background-color: white !important;
@@ -37,7 +36,6 @@
         padding-top: 0px;
         padding-bottom: 0px;
     }
-
 
     div.ru-desktop-panel-content div.columns {
         width: initial;
@@ -106,7 +104,6 @@
         background-color: initial !important;
     }
 
-
     .accordion.ru_accordion.physics dd a.ru_accordion_titlebar .ru_accordion_name
     {
         border: 0px solid $ru_physics;
@@ -128,7 +125,6 @@
     {
         border: 0px solid lighten($ru_maths, $ru_site_hover);
     }
-
 
     .ng-scope.active{
         padding-top: 20px
@@ -178,7 +174,6 @@
         margin-left: 0;
         margin-right: 0;
     }
-
 
     .tabs-content.ru_tabs.ru-answer .content * p {
         font-style: normal !important;
@@ -233,8 +228,6 @@
             padding-left: 10px !important;
         }
     }
-
-
 
     .print-header {
         float: right;
